멘토 관리 도메인 요구사항 변경에 따른 리팩토링 및 예외 처리 추가 (#53)