@@ -2,18 +2,17 @@ package com.j3s.yobuddy.domain.mentor.service;
 
 import com.j3s.yobuddy.domain.mentor.dto.request.AssignMenteeRequest;
 import com.j3s.yobuddy.domain.mentor.dto.response.MenteeListResponse;
-import com.j3s.yobuddy.domain.mentor.entity.Mentor;
 import com.j3s.yobuddy.domain.mentor.entity.MentorMenteeAssignment;
 import com.j3s.yobuddy.domain.mentor.exception.AssignmentNotFoundException;
+import com.j3s.yobuddy.domain.mentor.exception.InvalidMenteeRoleException;
 import com.j3s.yobuddy.domain.mentor.exception.MenteeAlreadyAssignedException;
 import com.j3s.yobuddy.domain.mentor.exception.MentorNotFoundException;
 import com.j3s.yobuddy.domain.mentor.exception.UnauthorizedMenteeAccessException;
 import com.j3s.yobuddy.domain.mentor.repository.MentorMenteeAssignmentRepository;
-import com.j3s.yobuddy.domain.mentor.repository.MentorRepository;
+import com.j3s.yobuddy.domain.user.entity.Role;
 import com.j3s.yobuddy.domain.user.entity.User;
 import com.j3s.yobuddy.domain.user.repository.UserRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,20 +21,23 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class MentorServiceImpl implements MentorService {
 
-    private final MentorRepository mentorRepository;
-    private final MentorMenteeAssignmentRepository assignmentRepository;
     private final UserRepository userRepository;
+    private final MentorMenteeAssignmentRepository assignmentRepository;
 
     @Override
     @Transactional
     public void assignMentee(Long mentorId, AssignMenteeRequest request) {
 
-        Mentor mentor = mentorRepository.findById(mentorId)
+        User mentor = userRepository.findById(mentorId)
+            .filter(u -> u.getRole() == Role.MENTOR)
             .orElseThrow(() -> new MentorNotFoundException(mentorId));
 
         User mentee = userRepository.findById(request.getMenteeId())
-            .orElseThrow(() -> new AssignmentNotFoundException(
-                request.getMenteeId()));
+            .orElseThrow(() -> new AssignmentNotFoundException(request.getMenteeId()));
+
+        if (mentee.getRole() != Role.USER) {
+            throw new InvalidMenteeRoleException(mentee.getUserId(), mentee.getRole());
+        }
 
         if (assignmentRepository.existsByMenteeUserIdAndDeletedFalse(mentee.getUserId())) {
             throw new MenteeAlreadyAssignedException(mentee.getUserId());
@@ -46,8 +48,6 @@ public class MentorServiceImpl implements MentorService {
             .mentee(mentee)
             .deleted(false)
             .build();
-
-        mentor.addMentee(assignment);
 
         assignmentRepository.save(assignment);
     }
@@ -60,13 +60,11 @@ public class MentorServiceImpl implements MentorService {
             .findByMenteeUserIdAndDeletedFalse(menteeId)
             .orElseThrow(() -> new AssignmentNotFoundException(menteeId));
 
-        if (!assignment.getMentor()
-            .getMentorId()
-            .equals(mentorId)) {
+        if (!assignment.getMentor().getUserId().equals(mentorId)) {
             throw new UnauthorizedMenteeAccessException(mentorId, menteeId);
         }
 
-        assignment.deleteAssignment();
+        assignment.softDelete();
     }
 
     @Override
@@ -74,22 +72,16 @@ public class MentorServiceImpl implements MentorService {
     public List<MenteeListResponse> getMentees(Long mentorId) {
 
         List<MentorMenteeAssignment> assignments =
-            assignmentRepository.findByMentorMentorIdAndDeletedFalse(mentorId);
+            assignmentRepository.findByMentorUserIdAndDeletedFalse(mentorId);
 
         return assignments.stream()
             .map(a -> new MenteeListResponse(
-                a.getMentee()
-                    .getUserId(),
-                a.getMentee()
-                    .getName(),
-                a.getMentee()
-                    .getEmail(),
-                a.getMentee()
-                    .getPhoneNumber(),
-                a.getMentee()
-                    .getDepartment()
-                    .getName()
+                a.getMentee().getUserId(),
+                a.getMentee().getName(),
+                a.getMentee().getEmail(),
+                a.getMentee().getPhoneNumber(),
+                a.getMentee().getDepartment().getName()
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
